Fix Repository - File API Mancanti Aggiunti
 PROBLEMA RISOLTO:
- File API erano esclusi da .gitignore
- api/verify-license.json, admin-stats.json, license-database.json ora inclusi
- Sito ora completamente funzionale su GitHub Pages

 API ENDPOINTS AGGIUNTI:
- /api/verify-license.json - Verifica licenze per plugin
- /api/admin-stats.json - Statistiche pannello admin
- /api/license-database.json - Database completo licenze

 SITO COMPLETO:
- Homepage con tema cyber-futuristico
- Sistema acquisto automatico licenze
- Pannello admin anti-frode
- Plugin simulator WordPress
- Tutti i file ora caricati correttamente

 GitHub Pages ora 100% funzionante!

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,13 @@ secrets.txt
 *.backup
 backup/
 
-# Mantieni le cartelle API ma ignora i file temporanei dentro
-api/*.json
-api/*.txt
+# Mantieni le cartelle API ma ignora solo i file temporanei
+api/licenses_database_temp.json
+api/rate_limit.txt
+api/verification_log.txt
+api/sync_log.txt
+!api/verify-license.json
+!api/admin-stats.json
+!api/license-database.json
 !api/verify-license.php
 !api/sync-licenses.php
